Bug 207701 - 'What's this?' functionality does not work on the 'New Contact' button
Summary: 'What's this?' functionality does not work on the 'New Contact' button
Status: VERIFIED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-17 18:55 UTC by Sabine Faure
Modified: 2009-09-25 00:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2009-09-17 18:55:11 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch KAB
- Go to Help menu/What's This?
- A question mark is added next to the cursor
- point the cursor on the 'New Contact' button (in the main toolbar).

The question mark becomes a forbidden sign meaning that there is no description available for that button.

However, the description exists:
- Go to File menu/New/New Contact...
- point and click the cursor while the question mark is displayed.

A 'Create a new contact' description appears in a blue background pop up dialogue.

Would it be possible to link that description to the New Contact button as well?

Trunk, Svn Rev 1024850
Comment 1 Tobias Koenig 2009-09-18 18:19:30 UTC
SVN commit 1025396 by tokoe:

Add WhatsThis information to 'New Contact' and 'New Group' button.

BUG: 207701


 M  +2 -0      kaddressbook_plugin.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1025396
Comment 2 Sabine Faure 2009-09-25 00:23:15 UTC
It is corrected now.

a 'Create a new contact'description dialogue pops up after selecting the 'What's This?' functionality and clicking on the 'New Contact' button (from the main toolbar).

Trunk, Svn Rev 1027765