Add WhatsThis information to 'New Contact' and 'New Group' button.

BUG: 207701

svn path=/trunk/KDE/kdepim/kontact/plugins/; revision=1025396